# shopstream

./: CONTRIBUTING.md  README.md  main.py  pyproject.toml
dashboard/: app.py
notebooks/: 01_data_understanding.ipynb  02_revenue_forecasting.ipynb
