[project]
name = "shopstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.1",
    "numpy>=2.4.6",
    "pandas>=3.0.5",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.60.0",
    "xgboost>=3.2.0",
]
